create basic layout

--- a/index.html
+++ b/index.html
@@ -9,6 +9,24 @@
 </head>
 <script src="/scripts/script.js" defer></script>
 <body>
-    
+    <div class="sidebar">
+        <p>sidebar</p>
+    </div>
+    <div class="header">
+        <div class="top-header">
+            <p>top-header</p>
+        </div>
+        <div class="bottom-header">
+            <p>bottom-header</p>
+        </div>
+    </div>
+    <div class="main-content">
+        <div class="main-left">
+            <p>main-left</p>
+        </div>
+        <div class="main-right">
+            <p>main-right</p>
+        </div>
+    </div>
 </body>
 </html>
