fix layout again

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <p>sidebar</p>
     </div>
     <div class="header">
-        <div class="top-header">
+        <div class="header-top">
             <p>top-header</p>
         </div>
-        <div class="bottom-header">
+        <div class="header-bottom">
             <p>bottom-header</p>
         </div>
     </div>
