--- a/index.html
+++ b/index.html
@@ -5,16 +5,67 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/styles/style.css">
-    <title>Admin Dashboard</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" /><title>Admin Dashboard</title>
 </head>
 <script src="/scripts/script.js" defer></script>
 <body>
     <div class="sidebar">
-        <p>sidebar</p>
+        <div class="logo">
+            <img src="https://picsum.photos/50/50" alt="Logo">
+            <p>Dashboard</p>
+        </div>
+        <div class="nav-main">
+            <ul>
+                <li>
+                    <p>Home</p>
+                </li>
+                <li>
+                    <p>Profile</p>
+                </li>
+                <li>
+                    <p>Messages</p>
+                </li>
+                <li>
+                    <p>History</p>
+                </li>
+                <li>
+                    <p>Tasks</p>
+                </li>
+                <li>
+                    <p>Communities</p>
+                </li>
+            </ul>
+        </div>
+        <div class="nav-sub">
+            <ul>
+                <li>
+                    <p>Settings</p>
+                </li>
+                <li>
+                    <p>Support</p>
+                </li>
+                <li>
+                    <p>Privacy</p>
+                </li>
+            </ul>
+        </div>
     </div>
     <div class="header">
         <div class="header-top">
-            <p>top-header</p>
+            <form action="" method="get">
+                <input type="text" name="search">
+            </form>
+            <div class="notification">
+                <span class="material-symbols-outlined">
+                    notifications_active
+                </span>
+            </div>
+            <div class="profile-img">
+                <img src="https://picsum.photos/50/50" alt="">
+            </div>
+            <div class="username">
+               <p>Morgan Oakley</p>
+            </div>
         </div>
         <div class="header-bottom">
             <p>bottom-header</p>
