add borders for vizualization to each div, add comments for more readability

--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/styles/style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:
-                                 opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <title>Admin Dashboard</title>
 </head>
 <script src="/scripts/script.js" defer></script>
@@ -39,17 +37,17 @@
     </aside>
 
     <header class="header">
-        <div class="header-top">
-            <label for="searchbar"><img src="" alt=""></label>
-            <input type="text" id="searchbar"name="search">
 
+        <div class="header-top">
+            <div class="search-bar">
+                <label for="searchbar"><img src="https://picsum.photos/20/20" alt="Magnifying glass"></label>
+                <input type="text" id="searchbar"name="search">
+            </div>
             <div class="notification">
-                <span class="material-symbols-outlined">
-                    notifications_active
-                </span>
+                <img src="https://picsum.photos/30/30" alt="">
             </div>
 
-            <div class="profile-img">
+            <div class="profile-img-s">
                 <img src="https://picsum.photos/50/50" alt="">
             </div>
 
@@ -59,7 +57,7 @@
         </div>
         
         <div class="header-bottom">
-            <div class="profile-img-big">
+            <div class="profile-img-l">
                 <img src="https://picsum.photos/70/70" alt="">
             </div>
             
