add all dummy text and placeholder images

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/styles/style.css">
     <title>Admin Dashboard</title>
+    <script src="/scripts/script.js" defer></script>
 </head>
-<script src="/scripts/script.js" defer></script>
 
 <body>
     <aside class="sidebar">
@@ -18,20 +18,47 @@
 
         <div class="nav-main">
             <ul>
-                <li><p>Home</p></li>
-                <li><p>Profile</p>
-                <li><p>Messages</p></li>
-                <li><p>History</p></li>
-                <li><p>Tasks</p></li>
-                <li><p>Communities</p></li>
+                <li>
+                    <img src="https://picsum.photos/20/20" alt="">
+                    <p>Home</p>
+                </li>
+                <li>
+                    <img src="https://picsum.photos/20/20" alt="">
+                    <p>Profile</p>
+                </li>
+                <li>
+                    <img src="https://picsum.photos/20/20" alt="">
+                    <p>Messages</p>
+                </li>
+                <li>
+                    <img src="https://picsum.photos/20/20" alt="">
+                    <p>History</p>
+                </li>
+                <li>
+                    <img src="https://picsum.photos/20/20" alt="">
+                    <p>Tasks</p>
+                </li>
+                <li>
+                    <img src="https://picsum.photos/20/20" alt="">
+                    <p>Communities</p>
+                </li>
             </ul>
         </div>
 
         <div class="nav-sub">
             <ul>
-                <li><p>Settings</p></li>
-                <li><p>Support</p></li>
-                <li><p>Privacy</p></li>
+                <li>
+                    <img src="https://picsum.photos/20/20" alt="">
+                    <p>Settings</p>
+                </li>
+                <li>
+                    <img src="https://picsum.photos/20/20" alt="">
+                    <p>Support</p>
+                </li>
+                <li>
+                    <img src="https://picsum.photos/20/20" alt="">
+                    <p>Privacy</p>
+                </li>
             </ul>
         </div>
     </aside>
@@ -41,7 +68,7 @@
         <div class="header-top">
             <div class="search-bar">
                 <label for="searchbar"><img src="https://picsum.photos/20/20" alt="Magnifying glass"></label>
-                <input type="text" id="searchbar"name="search">
+                <input type="text" id="searchbar" name="search">
             </div>
             <div class="notification">
                 <img src="https://picsum.photos/30/30" alt="">
@@ -75,10 +102,195 @@
 
     <main class="main-content">
         <div class="main-left">
-            <p>main-left</p>
+            <div class="title">
+                Your projects
+            </div>
+            <div class="projects">
+                <div class="project">
+                    <div class="project-title"><p>Super Cool Project</p></div>
+                    <div class="project-content">
+                        <p>
+                           Duis aute irure dolor in reprehenderit 
+                           in voluptate velit esse cillum dolore 
+                           eu fugiat nulla pariatur.
+                        </p>
+                    </div>
+                    <div class="project-buttons">
+                        <ul>
+                            <li><img src="https://picsum.photos/20/20" alt=""></li>
+                            <li><img src="https://picsum.photos/20/20" alt=""></li>
+                            <li><img src="https://picsum.photos/20/20" alt=""></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="project">
+                    <div class="project-title"><p>Less Cool Project</p></div>
+                    <div class="project-content">
+                        <p>
+                            Excepteur sint occaecat cupidatat non
+                            proident, sunt in culpa qui officia 
+                            deserunt mollit anim id est laborum.
+                        </p>
+                    </div>
+                    <div class="project-buttons">
+                        <ul>
+                            <li><img src="https://picsum.photos/20/20" alt=""></li>
+                            <li><img src="https://picsum.photos/20/20" alt=""></li>
+                            <li><img src="https://picsum.photos/20/20" alt=""></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="project">
+                    <div class="project-title"><p>Impossible app</p></div>
+                    <div class="project-content">
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur
+                            adipiscing elit, sed do eiusmod tempor
+                            incididunt ut labore et dolore magna aliqua.
+                        </p>
+                    </div>
+                    <div class="project-buttons">
+                        <ul>
+                            <li><img src="https://picsum.photos/20/20" alt=""></li>
+                            <li><img src="https://picsum.photos/20/20" alt=""></li>
+                            <li><img src="https://picsum.photos/20/20" alt=""></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="project">
+                    <div class="project-title"><p>Easy Peasy Project</p></div>
+                    <div class="project-content">
+                        <p>
+                            Porta lorem mollis aliquam ut porttitor 
+                            leo a diam sollicitudin. Nam libero justo 
+                            laoreet sit amet cursus.
+                        </p>
+                    </div>
+                    <div class="project-buttons">
+                        <ul>
+                            <li><img src="https://picsum.photos/20/20" alt=""></li>
+                            <li><img src="https://picsum.photos/20/20" alt=""></li>
+                            <li><img src="https://picsum.photos/20/20" alt=""></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="project">
+                    <div class="project-title"><p>Ad Blocker</p></div>
+                <div class="project-content">
+                    <p>
+                        Pulvinar etiam non quam lacus suspendisse 
+                        faucibus interdum posuere. Turpis egestas 
+                        integer eget aliquet nibh praesent tristique 
+                        magna sit.
+                    </p>
+                </div>
+                <div class="project-buttons">
+                    <ul>
+                        <li><img src="https://picsum.photos/20/20" alt=""></li>
+                        <li><img src="https://picsum.photos/20/20" alt=""></li>
+                        <li><img src="https://picsum.photos/20/20" alt=""></li>
+                    </ul>
+                </div></div>
+                <div class="project">
+                    <div class="project-title"><p>Money Maker</p></div>
+                <div class="project-content">
+                    <p>
+                        Etiam erat velit scelerisque in dictum non. 
+                        Nulla posuere sollicitudin aliquam ultrices 
+                        sagittis orci a scelerisque purus. Erat nam 
+                        at lectus urna.
+                    </p>
+                </div>
+                <div class="project-buttons">
+                    <ul>
+                        <li><img src="https://picsum.photos/20/20" alt=""></li>
+                        <li><img src="https://picsum.photos/20/20" alt=""></li>
+                        <li><img src="https://picsum.photos/20/20" alt=""></li>
+                    </ul>
+                </div>
+            </div>
+            </div>
         </div>
-        <div class="main-right">
-            <p>main-right</p>
+
+        <div class="main-right">           
+            <div class="announcements">
+
+                <div class="title"><p>Announcements</p></div>
+
+                <div class="announcement">
+                    <div class="title"><p>Site Maintenance</p></div>
+                    <div class="announce-content">
+                        <p>
+                            Quam quisque id diam vel quam. Diam sollicitudin 
+                            tempor id eu nisl nunc mi ipsum faucibus.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="announcement">
+                    <div class="title"><p>Community Share Day</p></div>
+                    <div class="announce-content">
+                        <p>
+                            Ac tortor dignissim convallis aenean et tortor 
+                            at risus viverra. Quis varius quam quisque id diam
+                             vel quam elementum pulvinar.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="announcement">
+                    <div class="title"><p>Updated Privacy policy</p></div>
+                    <div class="announce-content">
+                        <p>
+                            Viverra justo nec ultrices dui. Scelerisque 
+                            eleifend donec pretium vulputate sapien nec 
+                            sagittis aliquam. Magna sit amet purus gravida.
+                            Nibh sit amet commodo nulla facilisi nullam 
+                            vehicula ipsum a.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            
+            <div class="trending">
+                <div class="title"><p>Trending</p></div>
+                <div class="trend">
+                    <div class="profile-img-s">
+                        <img src="https://picsum.photos/50/50" alt="">
+                    </div>
+                    <div class="trend-text">
+                        <div class="trend-adres"><p>@Tegan</p></div>
+                        <div class="trend-name"><p>Wold Peace Builder</p></div>
+                    </div>
+                </div>
+                <div class="trend">
+                    <div class="profile-img-s">
+                        <img src="https://picsum.photos/50/50" alt="">
+                    </div>
+                    <div class="trend-text">
+                        <div class="trend-adres"><p>@morgan</p></div>
+                        <div class="trend-name"><p>Super Cool Project</p></div>
+                    </div>
+                </div>
+                <div class="trend">
+                    <div class="profile-img-s">
+                        <img src="https://picsum.photos/50/50" alt="">
+                    </div>
+                    <div class="trend-text">
+                        <div class="trend-adres"><p>@kendall</p></div>
+                        <div class="trend-name"><p>Life changing app</p></div>
+                    </div>
+                </div>
+                <div class="trend">
+                    <div class="profile-img-s">
+                        <img src="https://picsum.photos/50/50" alt="">
+                    </div>
+                    <div class="trend-text">
+                        <div class="trend-adres"><p>@alex</p></div>
+                        <div class="trend-name"><p>No traffic maker</p></div>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
 
