add google icons

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,1,0" />
     <title>Admin Dashboard</title>
     <script src="/scripts/script.js" defer></script>
 </head>
@@ -12,34 +13,34 @@
 <body>
     <aside class="sidebar">
         <div class="logo">
-            <img src="https://picsum.photos/50/50" alt="Logo">
+            <img src="https://picsum.photos/50/50" alt="">
             <p>Dashboard</p>
         </div>
 
         <div class="nav-main">
             <ul>
                 <li>
-                    <img src="https://picsum.photos/20/20" alt="">
+                    <span class="material-symbols-outlined">home</span>
                     <p>Home</p>
                 </li>
                 <li>
-                    <img src="https://picsum.photos/20/20" alt="">
+                    <span class="material-symbols-outlined">account_box</span>
                     <p>Profile</p>
                 </li>
                 <li>
-                    <img src="https://picsum.photos/20/20" alt="">
+                    <span class="material-symbols-outlined">mode_comment</span>
                     <p>Messages</p>
                 </li>
                 <li>
-                    <img src="https://picsum.photos/20/20" alt="">
+                    <span class="material-symbols-outlined">history</span>
                     <p>History</p>
                 </li>
                 <li>
-                    <img src="https://picsum.photos/20/20" alt="">
+                    <span class="material-symbols-outlined">task</span>
                     <p>Tasks</p>
                 </li>
                 <li>
-                    <img src="https://picsum.photos/20/20" alt="">
+                    <span class="material-symbols-outlined">diversity_3</span>
                     <p>Communities</p>
                 </li>
             </ul>
@@ -48,15 +49,15 @@
         <div class="nav-sub">
             <ul>
                 <li>
-                    <img src="https://picsum.photos/20/20" alt="">
+                    <span class="material-symbols-outlined">settings</span>
                     <p>Settings</p>
                 </li>
                 <li>
-                    <img src="https://picsum.photos/20/20" alt="">
+                    <span class="material-symbols-outlined">help_center</span>
                     <p>Support</p>
                 </li>
                 <li>
-                    <img src="https://picsum.photos/20/20" alt="">
+                    <span class="material-symbols-outlined">security</span>
                     <p>Privacy</p>
                 </li>
             </ul>
@@ -67,11 +68,13 @@
 
         <div class="header-top">
             <div class="search-bar">
-                <label for="searchbar"><img src="https://picsum.photos/20/20" alt="Magnifying glass"></label>
+                <label for="searchbar">
+                    <span class="material-symbols-outlined">search</span>
+                </label>
                 <input type="text" id="searchbar" name="search">
             </div>
             <div class="notification">
-                <img src="https://picsum.photos/30/30" alt="">
+                <span class="material-symbols-outlined">notifications_active</span>
             </div>
 
             <div class="profile-img-s">
@@ -117,9 +120,9 @@
                     </div>
                     <div class="project-buttons">
                         <ul>
-                            <li><img src="https://picsum.photos/20/20" alt=""></li>
-                            <li><img src="https://picsum.photos/20/20" alt=""></li>
-                            <li><img src="https://picsum.photos/20/20" alt=""></li>
+                            <li><span class="material-symbols-outlined">add_reaction</span></li>
+                            <li><span class="material-symbols-outlined">preview</span></li>
+                            <li><span class="material-symbols-outlined">share</span></li>
                         </ul>
                     </div>
                 </div>
@@ -134,9 +137,9 @@
                     </div>
                     <div class="project-buttons">
                         <ul>
-                            <li><img src="https://picsum.photos/20/20" alt=""></li>
-                            <li><img src="https://picsum.photos/20/20" alt=""></li>
-                            <li><img src="https://picsum.photos/20/20" alt=""></li>
+                            <li><span class="material-symbols-outlined">add_reaction</span></li>
+                            <li><span class="material-symbols-outlined">preview</span></li>
+                            <li><span class="material-symbols-outlined">share</span></li>
                         </ul>
                     </div>
                 </div>
@@ -151,9 +154,9 @@
                     </div>
                     <div class="project-buttons">
                         <ul>
-                            <li><img src="https://picsum.photos/20/20" alt=""></li>
-                            <li><img src="https://picsum.photos/20/20" alt=""></li>
-                            <li><img src="https://picsum.photos/20/20" alt=""></li>
+                            <li><span class="material-symbols-outlined">add_reaction</span></li>
+                            <li><span class="material-symbols-outlined">preview</span></li>
+                            <li><span class="material-symbols-outlined">share</span></li>
                         </ul>
                     </div>
                 </div>
@@ -168,9 +171,9 @@
                     </div>
                     <div class="project-buttons">
                         <ul>
-                            <li><img src="https://picsum.photos/20/20" alt=""></li>
-                            <li><img src="https://picsum.photos/20/20" alt=""></li>
-                            <li><img src="https://picsum.photos/20/20" alt=""></li>
+                            <li><span class="material-symbols-outlined">add_reaction</span></li>
+                            <li><span class="material-symbols-outlined">preview</span></li>
+                            <li><span class="material-symbols-outlined">share</span></li>
                         </ul>
                     </div>
                 </div>
@@ -186,9 +189,9 @@
                 </div>
                 <div class="project-buttons">
                     <ul>
-                        <li><img src="https://picsum.photos/20/20" alt=""></li>
-                        <li><img src="https://picsum.photos/20/20" alt=""></li>
-                        <li><img src="https://picsum.photos/20/20" alt=""></li>
+                        <li><span class="material-symbols-outlined">add_reaction</span></li>
+                            <li><span class="material-symbols-outlined">preview</span></li>
+                            <li><span class="material-symbols-outlined">share</span></li>
                     </ul>
                 </div></div>
                 <div class="project">
@@ -203,9 +206,9 @@
                 </div>
                 <div class="project-buttons">
                     <ul>
-                        <li><img src="https://picsum.photos/20/20" alt=""></li>
-                        <li><img src="https://picsum.photos/20/20" alt=""></li>
-                        <li><img src="https://picsum.photos/20/20" alt=""></li>
+                        <li><span class="material-symbols-outlined">add_reaction</span></li>
+                            <li><span class="material-symbols-outlined">preview</span></li>
+                            <li><span class="material-symbols-outlined">share</span></li>
                     </ul>
                 </div>
             </div>
