add fonts, style main content

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/styles/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,1,0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&family=Source+Code+Pro:wght@300;700&display=swap" rel="stylesheet">
     <title>Admin Dashboard</title>
     <script src="/scripts/script.js" defer></script>
 </head>
@@ -215,10 +218,9 @@
             </div>
         </div>
 
-        <div class="main-right">           
+        <div class="main-right">   
+            <div class="title"><p>Announcements</p></div>        
             <div class="announcements">
-
-                <div class="title"><p>Announcements</p></div>
 
                 <div class="announcement">
                     <div class="title"><p>Site Maintenance</p></div>
@@ -236,33 +238,29 @@
                         <p>
                             Ac tortor dignissim convallis aenean et tortor 
                             at risus viverra. Quis varius quam quisque id diam
-                             vel quam elementum pulvinar.
                         </p>
                     </div>
                 </div>
 
-                <div class="announcement">
+                <div class="announcement-last">
                     <div class="title"><p>Updated Privacy policy</p></div>
                     <div class="announce-content">
                         <p>
                             Viverra justo nec ultrices dui. Scelerisque 
                             eleifend donec pretium vulputate sapien nec 
                             sagittis aliquam. Magna sit amet purus gravida.
-                            Nibh sit amet commodo nulla facilisi nullam 
-                            vehicula ipsum a.
                         </p>
                     </div>
                 </div>
             </div>
-            
+            <div class="title"><p>Trending</p></div>
             <div class="trending">
-                <div class="title"><p>Trending</p></div>
                 <div class="trend">
                     <div class="profile-img-s">
                         <img src="https://picsum.photos/50/50" alt="">
                     </div>
                     <div class="trend-text">
-                        <div class="trend-adres"><p>@Tegan</p></div>
+                        <div class="trend-adress"><p>@Tegan</p></div>
                         <div class="trend-name"><p>Wold Peace Builder</p></div>
                     </div>
                 </div>
@@ -271,7 +269,7 @@
                         <img src="https://picsum.photos/50/50" alt="">
                     </div>
                     <div class="trend-text">
-                        <div class="trend-adres"><p>@morgan</p></div>
+                        <div class="trend-adress"><p>@morgan</p></div>
                         <div class="trend-name"><p>Super Cool Project</p></div>
                     </div>
                 </div>
@@ -280,7 +278,7 @@
                         <img src="https://picsum.photos/50/50" alt="">
                     </div>
                     <div class="trend-text">
-                        <div class="trend-adres"><p>@kendall</p></div>
+                        <div class="trend-adress"><p>@kendall</p></div>
                         <div class="trend-name"><p>Life changing app</p></div>
                     </div>
                 </div>
@@ -289,7 +287,7 @@
                         <img src="https://picsum.photos/50/50" alt="">
                     </div>
                     <div class="trend-text">
-                        <div class="trend-adres"><p>@alex</p></div>
+                        <div class="trend-adress"><p>@alex</p></div>
                         <div class="trend-name"><p>No traffic maker</p></div>
                     </div>
                 </div>
