add shadows, align items

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             </div>
             
             <div class="username">
-                <p>Hi there, Morgan Oakley</p>
+                <p>Hi there, <br> Morgan Oakley</p>
             </div>
             
             <div class="buttons">
