create basic layout

--- a/index.html
+++ b/index.html
@@ -8,22 +8,36 @@
     <title>Admin Dashboard</title>
 </head>
 <body>
+    <div class="container">
+        <header>
+            <div class="header-top">
+                header-top
+            </div>
+            <div class="header-bottom">
+                header-bottom
+            </div>
+        </header>
+        
+        <aside>
+            <div class="sidebar-logo-container">
+                logo-container
+            </div>
+            <div class="sidebar-nav-top">
+                nav-top
+            </div>
+            <div class="sidebar-nav-bottom">
+                nav-bottom
+            </div>
+        </aside>
 
-    <header>
-        test
-    </header>
-    
-    <aside>
-test
-    </aside>
-
-    <main class="main-content">
-        <div class="main-left">
-test
-        </div>
-        <div class="main-right">
-            test
-        </div>
-    </main>
+        <main class="main-content">
+            <div class="main-left">
+                main-left
+            </div>
+            <div class="main-right">
+                main-right
+            </div>
+        </main>
+    </div>
 </body>
 </html>
