add nav icons and items, add logo, align items

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <title>Admin Dashboard</title>
 </head>
 <body>
@@ -13,6 +14,7 @@
             <div class="header-top">
                 header-top
             </div>
+
             <div class="header-bottom">
                 header-bottom
             </div>
@@ -20,13 +22,30 @@
         
         <aside>
             <div class="sidebar-logo-container">
-                logo-container
+                <div class="logo-icon"><span id="logo-icon-large" class="material-symbols-outlined">dashboard</span>
+                </div>
+                <div class="logo-text">
+                    <h1>Dashboard</h1>
+                </div>
             </div>
+
             <div class="sidebar-nav-top">
-                nav-top
+                <ul>
+                    <li><span class="material-symbols-outlined">home</span><h3>Home</h3></li>
+                    <li><span class="material-symbols-outlined">account_box</span><h3>Profile</h3></li>
+                    <li><span class="material-symbols-outlined">mode_comment</span><h3>Messages</h3></li>
+                    <li><span class="material-symbols-outlined">history</span><h3>History</h3></li>
+                    <li><span class="material-symbols-outlined">topic</span><h3>Tasks</h3></li>
+                    <li><span class="material-symbols-outlined">groups</span><h3>Communities</h3></li>
+                </ul>
             </div>
+
             <div class="sidebar-nav-bottom">
-                nav-bottom
+                <ul>
+                    <li><span class="material-symbols-outlined">settings</span><h3>Settings</h3></li>
+                    <li><span class="material-symbols-outlined">help_center</span><h3>Support</h3></li>
+                    <li><span class="material-symbols-outlined">verified_user</span><h3>Privacy</h3></li>
+                </ul>    
             </div>
         </aside>
 
@@ -34,6 +53,7 @@
             <div class="main-left">
                 main-left
             </div>
+
             <div class="main-right">
                 main-right
             </div>
