layout top of the header, style and align

--- a/index.html
+++ b/index.html
@@ -12,7 +12,24 @@
     <div class="container">
         <header>
             <div class="header-top">
-                header-top
+                
+                <div class="header-top-search"> 
+                    <label for="searchbar" id="label-searchbar"><span class="material-symbols-outlined">search</span></label>
+                    <form action="" method="get">    
+                        <input type="text" id="searchbar" placeholder="Search...">
+                    </form>
+                </div>
+                <div class="header-top-options">
+                    <div class="message-alert">
+                        <span class="material-symbols-outlined">notifications_active</span>
+                    </div>
+                    <div class="user-avatar">
+                        <img src="/img/av1.png" alt="avatar">
+                    </div>
+                    <div class="user-name">
+                        <h3>Rob Verplanke</h3>
+                    </div>
+                </div>
             </div>
 
             <div class="header-bottom">
