finish header, begin layout of main content

--- a/index.html
+++ b/index.html
@@ -23,17 +23,30 @@
                     <div class="message-alert">
                         <span class="material-symbols-outlined">notifications_active</span>
                     </div>
-                    <div class="user-avatar">
-                        <img src="/img/av1.png" alt="avatar">
+                    <div class="user-avatar-small">
+                        <img src="/img/av1.png" alt="Users avatar">
                     </div>
                     <div class="user-name">
-                        <h3>Rob Verplanke</h3>
+                        <h3>Morgan Oakley</h3>
                     </div>
                 </div>
             </div>
 
             <div class="header-bottom">
-                header-bottom
+                <div class="user-avatar-large">
+                    <img src="/img/av1.png" alt="Users avatar">
+                </div>
+                <div class="user-info">
+
+                    <div class="user-info-welcome"><p>Hi there,</p></div>
+                    <div class="user-name"><h3>Morgan Oakley (@Morgan)</h3></div>
+                </div>
+
+                <div class="header-bottom-nav">
+                    <button>New</button>
+                    <button>Upload</button>
+                    <button>Share</button>
+                </div>
             </div>
         </header>
         
@@ -68,7 +81,39 @@
 
         <main class="main-content">
             <div class="main-left">
-                main-left
+                <div class="projects">
+                    <div class="projects-title"></div>
+                    <article id="project">
+                        <div class="project-title">titel</div>
+                        <div class="project-content">content</div>
+                        <div class="project-options">buttons</div>
+                    </article>
+                    <article id="project">
+                        <div class="project-title">titel</div>
+                        <div class="project-content">content</div>
+                        <div class="project-options">buttons</div>
+                    </article>
+                    <article id="project">
+                        <div class="project-title">titel</div>
+                        <div class="project-content">content</div>
+                        <div class="project-options">buttons</div>
+                    </article>
+                    <article id="project">
+                        <div class="project-title">titel</div>
+                        <div class="project-content">content</div>
+                        <div class="project-options">buttons</div>
+                    </article>
+                    <article id="project">
+                        <div class="project-title">titel</div>
+                        <div class="project-content">content</div>
+                        <div class="project-options">buttons</div>
+                    </article>
+                    <article id="project">
+                        <div class="project-title">titel</div>
+                        <div class="project-content">content</div>
+                        <div class="project-options">buttons</div>
+                    </article>
+                </div>
             </div>
 
             <div class="main-right">
